--- a/app/views/settings/new.html.erb
+++ b/app/views/settings/new.html.erb
@@ -414,7 +414,7 @@
     </table>
 </div>
 <h2 class="subtitle">
-    Profile Images
+   <!-- Profile Images -->
 </h2>
 <table align="center" width="100%">
         <tr>
@@ -532,7 +532,7 @@
          </td>
          <td style="vertical-align:top;">
             <div align="left">
-                <%= label(:label1, "Are you sure you want to delete your account?<br/> If you're having any specific problems. Just ", {}, { :class => "labelTo" }) %>
+                <%= label(:label1, "Are you sure you want to delete your account? If you're having any specific problems. Just ", {}, { :class => "labelTo" }) %>
                     <a href="#" style="color: #33b5e5;" onclick="document.location = 'mailto:help@mentormentored.org'; return false;">
                     Let me know</a>
             </div>
