--- a/app/views/communications/new.html.erb
+++ b/app/views/communications/new.html.erb
@@ -113,19 +113,80 @@
 </table>
 <% end %>
 
-
 <script type="text/javascript">
-   $("#communication_form").submit(function() {
-      var email = new RegExp(/\A[\w+\-.]+@[a-z\d\-.]+\.[a-z]+\z/i);
-      //alert(email);
-      var hasError1 = false;
-      var inp_email = $("#tb_email");
+   $("#communication_form").submit(function ( event ) {
+      //alert("Hassan");
+      //var phone_value = $("#cb_Phone").val();
+      var phone_value = $("#cb_Phone").is(':checked') ? 1 : 0;
       var email_value = $("#cb_Email").is(':checked') ? 1 : 0;
-      if(!inp_email.val().match(email))
+      var skype_value = $("#cb_Skype").is(':checked') ? 1 : 0;
+      var website_value = $("#cb_Website").is(':checked') ? 1 : 0;
+      var twitter_value = $("#cb_Twitter").is(':checked') ? 1 : 0;
+      var hasError = false;
+      //alert("phone_value "+ phone_value + " email_value " + email_value);
+      if(phone_value == 0 && email_value == 0 && skype_value == 0 && website_value == 0 && twitter_value == 0)
       {
+         var message = $("#errormessage").html("Please Select");//alert("Hassan");
+         message.show();
+         hasError = true;
+      } 
+      else
+      {
+         hasError = false;
+         $("#errormessage").empty().hide();
+      }
+      if(hasError)
+      {
+        event.preventDefault();
+      }
+   });
+</script>
+<script type="text/javascript">
+   $("#communication_form").submit(function ( event ) {
+      
+      var phone = /^((\+)?[1-9]{1,2})?([-\s\.])?((\(\d{1,4}\))|\d{1,4})(([-\s\.])?[0-9]{1,12}){1,2}$/;
+      
+      var hasError2 = false;
+      var inp_phone = $("#tb_phone").val();
+      var phone_value = $("#cb_Phone").is(':checked') ? 1 : 0;
+      var numbers = inp_phone.split("").length;
+      
+      if (phone_value == 1 && !phone.test(inp_phone))
+      {
+         //alert("Hassan");
+         var message =  $("#errormessage_phone").html("Invalid Phone");
+         message.show();
+         hasError2 = true;
+      }
+      else
+      {
+         hasError2 = false;
+         $("#errormessage_phone").empty().hide();
+      }
+      if(hasError2){
+        event.preventDefault();
+      }
+   });
+</script>
+<script type="text/javascript">
+   $("#communication_form").submit(function ( event ) {
+      
+      var email = /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+      var hasError1 = false;
+      var inp_email = $("#tb_email").val();
+      var email_value = $("#cb_Email").is(':checked') ? 1 : 0;
+      
+      if(email_value == 1 && !email.test(inp_email))
+      {
+      
          var message1 =  $("#errormessage_email").html("Invalid Email");
          message1.show();
          hasError1 = true;
+      }
+      else
+      {
+         hasError1 = false;
+         $("#errormessage_email").empty().hide();
       }
       if(hasError1)
       {
@@ -133,5 +194,3 @@
       }
    });
 </script>
-
-
