--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -126,7 +126,75 @@
       <!--   veterans-->
       
     </tr>
-   
+  </table>
+  <br/>
+  <table align="center" width="100%">
+    <tr>
+      <td align="center">
+        <%= f.text_field :user_Zip,:placeholder => "Zip"%>
+        <br/>
+        <%= f.text_field :user_City,:placeholder => "City" %>
+        <%= f.select :user_State, options_for_select([
+          "State",
+           "Alabama AL",
+                                "Alaska AK",
+                                "Arizona AZ",
+                                "Arkansas AR",
+                                "California CA",
+                                "Colorado CO",
+                                "Connecticut CT",
+                                "Delaware DE",
+                                "Florida FL",
+                                "Georgia GA",
+                                "Hawaii HI",
+                                "Idaho ID",
+                                "Illinois IL",
+                                "Indiana IN",
+                                "Iowa IA",
+                                "Kansas KS",
+                                "Kentucky KY",
+                                "Louisiana LA",
+                                "Maine ME",
+                                "Maryland MD",
+                                "Massachusetts MA",
+                                "Michigan MI",
+                                "Minnesota MN",
+                                "Mississippi MS",
+                                "Missouri MO",
+                                "Montana MT",
+                                "Nebraska NE",
+                                "Nevada NV",
+                                "New Hampshire NH",
+                                "New Jersey NJ",
+                                "New Mexico NM",
+                                "New York NY",
+                                "North Carolina NC",
+                                "North Dakota ND",
+                                "Ohio OH",
+                                "Oklahoma OK",
+                                "Oregon OR",
+                                "Pennsylvania PA",
+                                "Rhode Island RI",
+                                "South Carolina SC",
+                                "South Dakota SD",
+                                "Tennessee TN",
+                                "Texas TX",
+                                "Utah UT",
+                                "Vermont VT",
+                                "Virginia VA",
+                                "Washington WA",
+                                "West Virginia WV",
+                                "Wisconsin WI",
+                                "Wyoming WY" ]),:style => "width:154px" %>
+      </td>
+    </tr>
+  </tabie>
+  <table align="center" width="100%">
+    <tr>
+      <td align="center"><br/>
+        <%= f.file_field :photo %>
+      </td>
+    </tr>
   </table>
   <table width="84%">
     <tr>
