--- a/app/views/settings/new.html.erb
+++ b/app/views/settings/new.html.erb
@@ -3,19 +3,18 @@
     <script type="text/javascript">
         $(document).ready(function() {
             $("#btnAdd").click(function() {
-
-            var rownum=$("#controls > tbody > tr").length;
+                var rownum=$("#controls > tbody > tr").length;
             
-            var updated_row_num;
-            if (rownum == 0)
-            {
-                updated_row_num=0;
-            }
-            else {
-                updated_row_num=rownum/2;
-            }
+                var updated_row_num;
+                if (rownum == 0)
+                {
+                    updated_row_num=0;
+                }
+                else {
+                    updated_row_num=rownum/2;
+                }
             
-                       var field = $("#field").val();
+                var field = $("#field").val();
                 var DDL_fromProfession = "<input type='text' name='ParametersFromProf["+ updated_row_num  +"]' style='width:50px' id='DDL_FromProYear' />";
                 var DDL_ToProfession = "<input type='text' name='ParametersToProf["+ updated_row_num +"]' style='width:50px' id='DDL_ToProYear' />";
                 var newRow1 = "<tr><td align='center' style='font-size: large; color: #212121;' >"
@@ -156,7 +155,7 @@
                   </tr>
                     <tr>
                         <td align="center">
-                            <% @user_profession.each do |user_prof| %>
+                            <% @user_profession.each_with_index do |user_prof,i| %>
                             <table id="Profession_controls" cellpadding="10" cellspacing ="10"> 
                                         <script type="text/javascript">
                                 var rownum=$("Profession_controls > tbody > tr").length;
@@ -172,16 +171,16 @@
                                 </script>
                                 <tr>
                                    <td>
-                                      <input type="text" name="tf_designation" value="<%=  user_prof.Designation %>" style="">
+                                      <input type="text" name="tf_designation[<%= i %>" value="<%=  user_prof.Designation %>" style="">
                                       at
-                                      <input type="text" name="tf_company" value="<%= user_prof.Company %>" style=""><br/>
+                                      <input type="text" name="tf_company[<%= i %>]" value="<%= user_prof.Company %>" style=""><br/>
                                    </td>
                                 </tr>
                                 <tr>
                                    <td align="center">
-                                      <input type="text" name="tf_fromdesignation" value="<%= user_prof.Job_From %>" style="width:50px;">
+                                      <input type="text" name="tf_fromdesignation[<%= i %>]" value="<%= user_prof.Job_From %>" style="width:50px;">
                                       to
-                                      <input type="text" name="tf_todesignation" value="<%= user_prof.Job_To %>" style="width:50px;"> <br/>
+                                      <input type="text" name="tf_todesignation[<%= i %>]" value="<%= user_prof.Job_To %>" style="width:50px;"> <br/>
                                    </td>
                                 </tr>
                                 
@@ -203,7 +202,7 @@
                   </tr>
                   <tr>
                         <td align="center">
-                            <% @user_education.each do |user_ed| %>
+                            <% @user_education.each_with_index do |user_ed,i| %>
                             <table id="SchoolControls" cellpadding="10" cellspacing="10">
                                 <script type="text/javascript">
                                 var rownum=$("SchoolControls > tbody > tr").length;
@@ -220,14 +219,14 @@
                                 </script>
                                   <tr> 
                                      <td>
-                                        <input type="text" name="tf_education" value="<%= user_ed.SchoolName %>"><br/>
+                                        <input type="text" name="tf_education[<%= i %>]" value="<%= user_ed.SchoolName %>"><br/>
                                      </td>
                                   </tr>
                                   <tr>
                                      <td align="center">
-                                <input type="text" name="tf_fromeducation" value="<%= user_ed.SchoolFrom %>" style="width:50px;">
+                                <input type="text" name="tf_fromeducation[<%= i %>]" value="<%= user_ed.SchoolFrom %>" style="width:50px;">
                                 to
-                                <input type="text" name="tf_toeducation" value="<%= user_ed.SchoolTo %>" style="width:50px;"><br/>
+                                <input type="text" name="tf_toeducation[<%= i %>]" value="<%= user_ed.SchoolTo %>" style="width:50px;"><br/>
                                     </td>
                                   </tr>
                                   
