--- a/app/views/static_pages/connections.html.erb
+++ b/app/views/static_pages/connections.html.erb
@@ -73,6 +73,15 @@
                 </tr>
                 <% end %>
             </table>
+                        <table>
+                <tr>
+                    <td>
+                        <div class="button">
+                            <%= link_to "Cancel", rejectconnection_path(:id =>u.RequestFrom), { method: :post, :class => "buttonblck" } %>
+                        </div> 
+                    </td>
+                </tr>
+            </table>
         </td>
     </tr>
 </table>
