--- a/app/views/educations/new.html.erb
+++ b/app/views/educations/new.html.erb
@@ -57,16 +57,17 @@
 
      
 var controls = "<tr><td>From "+ DDL_fromProfession + " To "+DDL_ToProfession+ "</td></tr>";
-controls += "<br/><button type='button' class='btn_rmv'>Remove</button></td></tr>";
+var control = "<tr><td align='center'><button type='button' class='btn_rmv'>Remove</button></td></tr>";
 
      $('#Controls').append(newRow);
      $('#Controls').append(controls);
+     $('#Controls').append(control);
      return false;
   });
 
             $('#Controls').on('click', '.btn_rmv', function() {
                 var index = $(this).closest('tr').index() + 2
-                $('#Controls tr:nth-child(n+' + (index - 2) + ')').remove();
+                $('#Controls tr:nth-child(n+' + (index - 3) + ')').remove();
                 return false;
             });
 
