--- a/app/views/static_pages/connections.html.erb
+++ b/app/views/static_pages/connections.html.erb
@@ -77,7 +77,7 @@
                 <tr>
                     <td>
                         <div class="button">
-                            <%= link_to "Cancel", rejectconnection_path(:id =>u.RequestFrom), { method: :post, :class => "buttonblck" } %>
+                            <%= link_to "Remove", rejectconnection_path(:id =>u.RequestFrom), { method: :post, :class => "buttonblck" } %>
                         </div> 
                     </td>
                 </tr>
